Fix column gap for posts

--- a/src/components/blog/styles.module.css
+++ b/src/components/blog/styles.module.css
@@ -123,7 +123,7 @@
   color: var(--color-white);
   margin-top: 2rem;
   column-count: 2; /* Distribuir contenido en dos columnas */
-  column-gap: 2rem; /* Espacio entre columnas */
+  column-gap: 3rem; /* Espacio entre columnas */
   padding: 2rem;
 }
 
